RESOLVED FIXED305657
Fix typo in Frame::m_ownerPermissionsPolicyOverride
https://bugs.webkit.org/show_bug.cgi?id=305657
Summary Fix typo in Frame::m_ownerPermissionsPolicyOverride
Sihui Liu
Reported 2026-01-16 11:17:55 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-16 11:18:36 PST
Sihui Liu
Comment 2 2026-01-16 11:19:40 PST
EWS
Comment 3 2026-01-16 15:09:05 PST
Committed 305737@main (8a595788e266): <https://commits.webkit.org/305737@main> Reviewed commits have been landed. Closing PR #56729 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.