Fix typo in Frame::m_ownerPermissionsPolicyOverride https://bugs.webkit.org/show_bug.cgi?id=305657 rdar://168315045

Reviewed by Per Arne Vollan.

* Source/WebCore/page/Frame.cpp:
(WebCore::Frame::setOwnerPermissionsPolicy):
(WebCore::Frame::ownerPermissionsPolicy const):
* Source/WebCore/page/Frame.h:

Canonical link: https://commits.webkit.org/305737@main